@@ -4,7 +4,8 @@
 ;; TSUCHIYA Masatoshi <tsuchiya@namazu.org>
 
 ;; Authors: Shun-ichi GOTO     <gotoh@taiyo.co.jp>,
-;;          TSUCHIYA Masatoshi <tsuchiya@namazu.org>
+;;          TSUCHIYA Masatoshi <tsuchiya@namazu.org>,
+;;          Luca Capello       <luca@pca.it>
 ;; Keywords: w3m, WWW, hypermedia
 
 ;; This file is a part of emacs-w3m.
